[FIXED] more nicer toolbar colors on safari mobile

--- a/src/app.scss
+++ b/src/app.scss
@@ -9,7 +9,7 @@
 
   font-family: 'Ubuntu', sans-serif;
   color: var(--primary-text-color);
-  background-color: var(--bg-color);
+  background-color: var(--secondary-color);
   font-size: 16px;
   color-scheme: dark;
 
